# cryptocafe/cafe/src/main/kotlin/org/keddad/models/OrderCreateRequest.kt
@@ -1,2 +1,5 @@
 package org.keddad.models
 
+import kotlinx.serialization.Serializable
+@Serializable
+data class OrderCreateRequest(val comment: String, val dishes: List<Dish>)
